--- a/WebApplication/Views/HomeUser/Cart.cshtml
+++ b/WebApplication/Views/HomeUser/Cart.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "Cart";
     Layout = "~/Views/Shared/ULayout.cshtml";
 }
@@ -10,10 +9,8 @@
 <div class="page-title-banner">
     <div class="container">
         <div class="left-right-image">
-            <img src="~/assets/media/page-title-banner/img-1.png"
-                 class="left-img" alt>
-            <img src="~/assets/media/page-title-banner/img-2.png"
-                 class="right-img" alt>
+            <img src="~/assets/media/page-title-banner/img-1.png" class="left-img" alt>
+            <img src="~/assets/media/page-title-banner/img-2.png" class="right-img" alt>
         </div>
         <div class="content">
             <div class="title">
@@ -26,118 +23,80 @@
 <!-- Main Content Start -->
 <div class="page-content">
 
-    <!-- Blog Detail Start -->
+    <!-- Cart Detail Start -->
     <section class="wishlist p-96">
         <div class="container">
 
-
-            @{
-
-                if (Model.CkeckIfCartContainItems(Model.CartId))
-                {
-
-                    <!-- Sales Start -->
-                    <section class="sales-product">
-                        <div class="container">
-                            <div class="d-flex flex-xl-row flex-column  gap-4">
-                                <div class="product st-2">
-                                    @{
-
-                                        var productTable = Model.dataForTableCart(Model.UserId);
-
-                                        foreach (var product in productTable)
-                                        {
-
-                                            if (product != null && product.IsActive)
-                                            {
-                                                <div class="product-card sec">
-                                                    <div class="img-block">
-                                                        <img src=@product.ImagePath alt="">
-                                                    </div>
-                                                    <div class="content">
-                                                        <div class="name-price">
-                                                            <div class="product-name">
-                                                                <h5>@product.ProductName</h5>
-                                                            </div>
-                                                            <div class="product-price">
-                                                                <h5 class="bold">– $@product.Price</h5>
-                                                            </div>
-                                                            <div class="product-price">
-                                                                <h5 class="bold">– $@Model.getCountInCart(Model.CartId, product.ProductId)</h5>
-                                                            </div>
-                                                        </div>
-                                                        <div class="btn-block">
-
-                                                            @{
-                                                                var countCart = Model.getCountInCart(Model.CartId, product.ProductId);
-                                                            }
-
-                                                            @using (Html.BeginForm("IncreaseCartCount", "Cart", FormMethod.Post))
-                                                            {
-                                                                <input type="text" id="countCart" value="@countCart" readonly>
-                                                                <input type="hidden" id="productId" name="ProductId" value="@product.ProductId" />
-                                                                <button type="submit" id="increase" name="CartId" value="@Model.CartId">Increase</button>
-                                                            }
-
-                                                            @using (Html.BeginForm("DecreaseCartCount", "Cart", FormMethod.Post))
-                                                            {
-                                                                <input type="hidden" id="productId" name="ProductId" value="@product.ProductId" />
-                                                                <button type="submit" id="decrease" name="CartId" value="@Model.CartId">Decrease</button>
-                                                            }
-
-                                                            <a href="@Url.Action("DeleteProductFromCart", "Cart", new { productId = product.ProductId })" class="bin">
-                                                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                                    <path d="M20.4375 2.8125H16.9219V2.10938C16.9219 0.946266 15.9756 0 14.8125 0H9.1875C8.02439 0 7.07812 0.946266 7.07812 2.10938V2.8125H3.5625C2.39939 2.8125 1.45312 3.75877 1.45312 4.92188C1.45312 5.856 2.06367 6.64973 2.90648 6.9263L4.16062 22.0658C4.25095 23.1504 5.1743 24 6.26269 24H17.7373C18.8258 24 19.7491 23.1504 19.8395 22.0654L21.0935 6.92625C21.9363 6.64973 22.5469 5.856 22.5469 4.92188C22.5469 3.75877 21.6006 2.8125 20.4375 2.8125ZM8.48438 2.10938C8.48438 1.72167 8.7998 1.40625 9.1875 1.40625H14.8125C15.2002 1.40625 15.5156 1.72167 15.5156 2.10938V2.8125H8.48438V2.10938ZM18.438 21.949C18.4079 22.3105 18.1001 22.5938 17.7373 22.5938H6.26269C5.89992 22.5938 5.59214 22.3105 5.56209 21.9494L4.32628 7.03125H19.6737L18.438 21.949ZM20.4375 5.625H3.5625C3.1748 5.625 2.85938 5.30958 2.85938 4.92188C2.85938 4.53417 3.1748 4.21875 3.5625 4.21875H20.4375C20.8252 4.21875 21.1406 4.53417 21.1406 4.92188C21.1406 5.30958 20.8252 5.625 20.4375 5.625Z" fill="#7A7F85" />
-                                                                    <path d="M9.1862 20.4409L8.48307 9.09715C8.45902 8.70954 8.12354 8.41474 7.73781 8.43888C7.3502 8.46293 7.05549 8.79659 7.07949 9.18415L7.78262 20.5279C7.80573 20.9007 8.11529 21.1876 8.48373 21.1876C8.89093 21.1876 9.21118 20.8446 9.1862 20.4409Z" fill="#7A7F85" />
-                                                                    <path d="M12 8.4375C11.6117 8.4375 11.2969 8.75231 11.2969 9.14062V20.4844C11.2969 20.8727 11.6117 21.1875 12 21.1875C12.3883 21.1875 12.7031 20.8727 12.7031 20.4844V9.14062C12.7031 8.75231 12.3883 8.4375 12 8.4375Z" fill="#7A7F85" />
-                                                                    <path d="M16.2623 8.43887C15.8755 8.41483 15.541 8.70953 15.517 9.09714L14.8139 20.4409C14.7899 20.8285 15.0846 21.1621 15.4722 21.1862C15.86 21.2102 16.1934 20.9153 16.2174 20.5279L16.9206 9.18414C16.9446 8.79653 16.6499 8.46287 16.2623 8.43887Z" fill="#7A7F85" />
-                                                                </svg>
-                                                            </a>
-
-                                                            <a href="@Url.Action("ProductDetail", "HomeUser", new { productId = product.ProductId })" class="list-btn">
-                                                                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
-                                                                    <g clip-path="url(#clip0_1109_1878)">
-                                                                        <path d="M31.8026 15.4416C31.517 15.123 24.6467 7.62939 16.0415 7.62939C7.43641 7.62939 0.56616 15.123 0.280473 15.4416C-0.0381523 15.7977 -0.0381523 16.3361 0.280473 16.6922C0.56616 17.0108 7.43653 24.5044 16.0415 24.5044C24.6465 24.5044 31.5169 17.0108 31.8026 16.6922C32.1212 16.3361 32.1212 15.7977 31.8026 15.4416ZM16.0415 22.6294C12.4233 22.6294 9.47904 19.6851 9.47904 16.0669C9.47904 12.4487 12.4233 9.50439 16.0415 9.50439C19.6597 9.50439 22.604 12.4487 22.604 16.0669C22.604 19.6851 19.6597 22.6294 16.0415 22.6294Z" fill="#2C2D2F" />
-                                                                        <path d="M16.979 14.1919C16.979 13.2488 17.4472 12.4191 18.1595 11.9088C17.5203 11.5816 16.8075 11.3794 16.0415 11.3794C13.457 11.3794 11.354 13.4823 11.354 16.0669C11.354 18.6515 13.457 20.7544 16.0415 20.7544C18.3555 20.7544 20.2708 19.0648 20.6492 16.857C18.7613 17.4648 16.979 16.037 16.979 14.1919Z" fill="#2C2D2F" />
-                                                                    </g>
-                                                                    <defs>
-                                                                        <clipPath id="clip0_1109_1878">
-                                                                            <rect width="32" height="32" fill="white" />
-                                                                        </clipPath>
-                                                                    </defs>
-                                                                </svg>
-                                                            </a>
-                                                        </div>
-                                                    </div>
+            @if (Model.CkeckIfCartContainItems(Model.CartId))
+            {
+                <!-- Sales Start -->
+                <section class="sales-product">
+                    <div class="container">
+                        <div class="d-flex flex-wrap justify-content-center">
+                            @{
+                                var productTable = Model.dataForTableCart(Model.UserId);
+                                foreach (var product in productTable)
+                                {
+                                    if (product != null && product.IsActive)
+                                    {
+                                        <div class="product-card sec text-center mb-4 mx-3" style="max-width: 400px;">
+                                            <div class="img-block mb-3">
+                                                <img src="@product.ImagePath" alt="" class="img-fluid">
+                                            </div>
+                                            <div class="content">
+                                                <div class="name-price mb-2">
+                                                    <h5>@product.ProductName</h5>
+                                                    <h5 class="bold">– $@product.Price</h5>
                                                 </div>
-                                            }
-                                        }
+                                                <div class="product-quantity mb-3">
+                                                    <h5 class="bold">Quantity: @Model.getCountInCart(Model.CartId, product.ProductId)</h5>
+                                                </div>
+                                                <div class="btn-block d-flex justify-content-center">
+                                                    @{
+                                                        var countCart = Model.getCountInCart(Model.CartId, product.ProductId);
+                                                    }
+                                                    @using (Html.BeginForm("IncreaseCartCount", "Cart", FormMethod.Post, new { @class = "mx-2" }))
+                                                    {
+                                                        <input type="hidden" name="ProductId" value="@product.ProductId" />
+                                                        <input type="hidden" name="CartId" value="@Model.CartId" />
+                                                        <button type="submit" class="cus-btn primary">Increase</button>
+                                                    }
+                                                    @using (Html.BeginForm("DecreaseCartCount", "Cart", FormMethod.Post, new { @class = "mx-2" }))
+                                                    {
+                                                        <input type="hidden" name="ProductId" value="@product.ProductId" />
+                                                        <input type="hidden" name="CartId" value="@Model.CartId" />
+                                                        <button type="submit" class="cus-btn primary">Decrease</button>
+                                                    }
+                                                    <a href="@Url.Action("DeleteProductFromCart", "Cart", new { productId = product.ProductId })" class="cus-btn primary mx-2">
+                                                        <i class="fas fa-trash-alt"></i>
+                                                    </a>
+                                                    <a href="@Url.Action("ProductDetail", "HomeUser", new { productId = product.ProductId })" class="cus-btn primary mx-2">
+                                                        <i class="fas fa-info-circle"></i>
+                                                    </a>
+                                                </div>
+                                            </div>
+                                        </div>
                                     }
-
-
-                                </div>
-
-                            </div>
+                                }
+                            }
                         </div>
-                    </section>
-                    <!-- Sales End -->
-                }
-                else
-                {
-                    <h1>Cart is empty</h1>
-                }
+                    </div>
+                </section>
+                <!-- Sales End -->
+            }
+            else
+            {
+                <h1 class="text-center">Cart is empty</h1>
             }
 
-            <div>
+            <div class="text-center mt-4">
                 <a href="@Url.Action("ShopListing", "HomeUser")" class="cus-btn primary">Continue Shopping</a>
-            </div>
-            <div>
                 <a href="@Url.Action("Checkout", "HomeUser")" class="cus-btn primary">Go to Checkout</a>
             </div>
 
         </div>
     </section>
-    <!-- Blog Detail End -->
+    <!-- Cart Detail End -->
 </div>
 
 <!-- Main Content End -->
