--- a/WebApplication/Views/HomeUser/Wishlist.cshtml
+++ b/WebApplication/Views/HomeUser/Wishlist.cshtml
@@ -90,7 +90,7 @@
             }
 
             <div class="text-center mt-4">
-                <a href="@Url.Action("ShopListing", "HomeUser")" class="cus-btn primary">Continue Shopping</a>
+                <a href="@Url.Action("ShopListing", "HomeUser")" class="cus-btn primary d-inline-block mx-2">Continue Shopping</a>
             </div>
         </div>
     </section>
