--- a/WebApplication/Views/Home/ShopListing.cshtml
+++ b/WebApplication/Views/Home/ShopListing.cshtml
@@ -32,10 +32,8 @@
             <div class="row">
                 <div class="col-xl-4">
                     <div class="mb-32">
-                        <form action="shop-listing-2.html"
-                              class="input-group search-bar">
-                            <input type="text" placeholder="Search..."
-                                   required />
+                        <form action="@Url.Action("ShopListingSearch", "Home")" method="" class="input-group search-bar">
+                            <input type="text" name="search" placeholder="Search..." value="@Request.QueryString["search"]" required />
                             <button class="search" type="submit">
                                 <i class="far fa-search search-icon"></i>
                             </button>
@@ -101,6 +99,7 @@
                                 </li>
                             </ul>
                         </div>
+
                         <form class="card-body tab-content">
                             <div class="tab-pane active" id="all">
                                 <div class="product type-2">
