--- a/WebApplication/Views/HomeUser/HomeUsers.cshtml
+++ b/WebApplication/Views/HomeUser/HomeUsers.cshtml
@@ -24,7 +24,7 @@
                     Discover the joy of play with our wide selection of toys for children of all ages.<br> Thank you for visiting the Online Toy Store. Happy shopping, and may your adventures in play begin!
                 </p>
             </div>
-            <a href="/HomeAdmin/ShopListing" class="cus-btn primary">Shop Now</a>
+            <a href="/HomeUser/ShopListing" class="cus-btn primary">Shop Now</a>
         </div>
     </div>
 </div>
