--- a/WebApplication/Views/ManageProduct/Index.cshtml
+++ b/WebApplication/Views/ManageProduct/Index.cshtml
@@ -29,8 +29,8 @@
             <thead class="thead-dark">
                 <tr>
                     <th>ID</th>
-                    <th>Name</th>
                     <th>Image</th>
+                    <th>Name</th>
                     <th>Category</th>
                     <th>Price</th>
                     <th>Active</th>
@@ -71,37 +71,40 @@
                     }
                 }
 
-                <div class="text-left mb-3">
-                    @using (Html.BeginForm("CreateProduct", "ManageProduct", FormMethod.Get, new { id = "addProductForm" }))
-                    {
-                        <button type="submit" class="btn btn-danger btn-lg" id="addProductBtn">Add Product</button>
-                    }
-                </div>
+            </tbody>
+        </table>
 
-                <div class="text-left mb-3">
-                    @using (Html.BeginForm("EditProduct", "ManageProduct", FormMethod.Post, new { id = "editProductForm" }))
-                    {
-                        <div class="form-group">
-                            <input type="text" id="EditProduct" name="ProductNumber" class="form-control mb-2" placeholder="Enter the number of product...">
-                            <button type="submit" class="btn btn-primary btn-sm edit-btn">Edit</button>
-                        </div>
-                    }
-                </div>
+        <div class="text-left mb-3">
+            @using (Html.BeginForm("CreateProduct", "ManageProduct", FormMethod.Get, new { id = "addProductForm" }))
+            {
+                <button type="submit" class="btn btn-danger btn-lg" id="addProductBtn">Add Product</button>
+            }
+        </div>
 
-                <div class="text-left mb-3">
-                    @using (Html.BeginForm("DeleteProduct", "ManageProduct", FormMethod.Post, new { id = "deleteProductForm" }))
-                    {
-                        <div class="form-group">
-                            <input type="text" id="DeleteProduct" name="ProductNumber" class="form-control mb-2" placeholder="Enter the number of product...">
-                            <button type="submit" class="btn btn-danger btn-sm delete-btn">Delete</button>
-                        </div>
-                    }
+        <div class="text-left mb-3">
+            @using (Html.BeginForm("EditProduct", "ManageProduct", FormMethod.Post, new { id = "editProductForm" }))
+            {
+                <div class="form-group">
+                    <input type="text" id="EditProduct" name="ProductNumber" class="form-control mb-2" placeholder="Enter the number of product...">
+                    <button type="submit" class="btn btn-primary btn-sm edit-btn">Edit</button>
                 </div>
+            }
+        </div>
 
-                <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-                @Html.Raw("<script src=\"https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js\"></script>")
-                <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-                <script>
+        <div class="text-left mb-3">
+            @using (Html.BeginForm("DeleteProduct", "ManageProduct", FormMethod.Post, new { id = "deleteProductForm" }))
+            {
+                <div class="form-group">
+                    <input type="text" id="DeleteProduct" name="ProductNumber" class="form-control mb-2" placeholder="Enter the number of product...">
+                    <button type="submit" class="btn btn-danger btn-sm delete-btn">Delete</button>
+                </div>
+            }
+        </div>
+
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+        @Html.Raw("<script src=\"https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js\"></script>")
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+        <script>
         $(document).ready(function () {
             $('#search').on('keyup', function () {
                 var value = $(this).val().toLowerCase();
