Invalid object name 'dbo.UDbTables'

--- a/WebApplication/Views/ManageUsers/ManageUsers.cshtml
+++ b/WebApplication/Views/ManageUsers/ManageUsers.cshtml
@@ -32,6 +32,7 @@
                     <th>Username</th>
                     <th>Email</th>
                     <th>UserRole</th>
+                    <th>isActive</th>
                 </tr>
             </thead>
 
@@ -51,6 +52,7 @@
                                 <td>@item.Email</td>
                                 @*<td>@item.UserIp</td>*@
                                 <td>@item.Role</td>
+                                <td>@item.isActive</td>
 
                             </tr>
 
